ie fix headlines now visible

--- a/assets/css/yir.css
+++ b/assets/css/yir.css
@@ -1489,9 +1489,7 @@ text-shadow: 0px 1px 2px rgba(0,0,0,.5);
     .caption {
         position: absolute;
         top: 57px;
-        width: 87%;        
-        overflow-y: auto;
-        overflow-x: hidden;        
+        width: 87%;               
         overflow: visible; 
     }
     
